alignment of bookingform fix

--- a/src/styles/BookingForm.module.scss
+++ b/src/styles/BookingForm.module.scss
@@ -32,7 +32,6 @@ $anim-speed: 0.85; // in seconds
   flex-shrink: 0;
   align-items: center;
   padding-top: 20vh;
-  padding-left: 100px;
   width: 100%;
   flex-wrap: wrap;
   h3,
